--- a/templates/binary/colorcode.html
+++ b/templates/binary/colorcode.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% extends "layouts/base.html" %}
+{% extends "layouts/colorbase.html" %}
 
 <!-- Search for all the Hack: below for hack-a-thon and mini-lab requirements -->
 <!-- need to adjust Templates to start -->
@@ -11,6 +11,7 @@
 {% set BITS = 8 %}
 {% set ROWS = 3 %}
 {% set MAX = ((2 ** BITS) - 1) %}
+
 
 <!-- Hack: Set bulbs and pass as variables via Python render_template
            add new images (ie PNGs) to project -->
@@ -24,12 +25,15 @@
     <title>Binary page</title>
     <script>
         /* Below are JavaScript functions or Code Blocks */
-
         // Global variables for Javascript sequence of code in <script> tags
         const BITS = '{{ BITS }}'; // number of BITS (or Bulbs) displayed on screen
         const ROWS = '{{ ROWS }}'; // number of BIT Table Rows
         let max = '{{ MAX }}'; let MAX = parseInt(max, 10);  // MAX integer value of bits
 
+        var qRow =["Red", "Green", "Blue"];
+        var r = 0;
+        var g = 0;
+        var b = 0;
         /* This function reads digit<n> variables and creates a string of bits
             parameter: <none>
             returns: <string>, the current value of each bit (ie "1010001")
@@ -43,6 +47,43 @@
             return bits;
         }
 
+         //to set the main heading
+        function convertRGBToHex(r, g, b) {
+            var red = r <<16 ; // R is from 16:23
+            var green = g << 8 // G is from 15:8
+            //RGB needs 24 bits representation, we have the necessary 24 bits in conversion
+            // left shift 1 all the way to the 24th bit
+            // convert to hex to feed the CSS color string and remove the leading1 before returning
+            var result = ((1 << 24) + red + green + b).toString(16).slice(1);
+            return  "#"+ result;
+        }
+
+        function setColors(binary,q) {
+            //set color of individual row here
+            var binVal = parseInt(binary, 2);
+
+            if(q == 0) {
+                r = binVal;
+            } else if (q == 1) {
+                g = binVal;
+            } else {
+                b = binVal;
+            }
+
+            //get corresponding row colors
+            var rgbRow = document.getElementById("RowID"+q);
+            //change font color to see in the background
+            rgbRow.style.color = "white";
+            //change rgb background color
+            rgbRow.style.backgroundColor = "rgb(" + r+ "," + g+ "," + b + ")";
+
+            //set main heading to rgb value, R is from 23:16, G is from 15:8, B is from 7:0
+            let mainH = document.getElementById("Main-Hdg");
+            mainH.style.color = "white";
+            let rgbvalue = convertRGBToHex(r, g, b); //will hold the rgb value of the 3 individual rows
+            alert("r = "+r + " g = "+g + " b = "+ b + " rgbHex = " + rgbvalue.toString());
+            mainH.style.backgroundColor = rgbvalue;
+        }
         /* This function sets or resets (setter function) the DOM values (conversions) from binary string.
              parameter: <binary>, the current value of each bit (ie "1010001")
              returns: <none>
@@ -52,10 +93,8 @@
             document.getElementById('binary'+q).innerHTML = binary;
             // DOM assignment to Octal conversion
             document.getElementById('decimal'+q).innerHTML = parseInt(binary, 2).toString(10);
-            /* Hack: show ASCII printable character(s) for each 8 bits
-             DOM assignment by converting decimal https://www.w3schools.com/jsref/jsref_fromcharcode.asp
-             below ASCII for more ideas of where to make changes
-             */
+            //set color for the individual row
+            setColors(binary,q);
         }
 
         /* This function converts decimal number to selected base using decimal, base, quotient, remainder.
@@ -81,11 +120,13 @@
             return conversion;
         }
 
-        /* This function simulates the turning on and turning off of the Bulb
+
+
+        /* This function simulates the turning on and turning off of the Bulb in each specific row 'q'
              parameter: <i>, the DOM id of the specific Bulb as well as its related information
              returns: <none>
+             desc : toggle selected bit and recalculate
          */
-        // toggle selected bit and recalculate
         function toggleBit(i,q) {
             //alert("Digit action: " + i );
             const dig = document.getElementById('digit'+q+'-'+ i);
@@ -103,6 +144,7 @@
             }
             // Binary numbers
             const binary = getBits(q);
+            //change to other number bases
             setConversions(binary,q);
         }
 
@@ -146,13 +188,17 @@
 {% endblock %}
 
 
+
 {% block body %}
-    <h1 class="text-center">Binary Math with Conversions</h1>
+    <h2 id="Main-Hdg"
+        style="background-color:Grey"
+        class="text-center">RGB Heading</h2>
     {% for q in range(ROWS) %}
+        <h3 id="RowID{{ q }}"
+            style="background-color:rgb(240, 240, 240); color:black"
+            class="text-center">Row</h3>
     <div class="container">
-
         <div class="row justify-content-md-center">
-
             <div class="col-8">
                 <table class="table">
                     <tr id="table">
@@ -168,7 +214,6 @@
                         <td id="decimal{{ q }}">0</td>
                         <!-- Hack: display ASCII printable character(s)  -->
                         <td><button type="button" id="sub1" onclick="add(-1,{{ q }})">-1</button></td>
-
                     </tr>
                 </table>
             </div>
@@ -189,9 +234,7 @@
                     </tr>
                 </table>
             </div>
-
         </div>
-
     </div>
     {% endfor %}
 {% endblock %}
