--- a/templates/binary.html
+++ b/templates/binary.html
@@ -230,6 +230,7 @@
                     <th>Decimal</th>
                     <!-- Hack: display ASCII label for printable character(s)  -->
                     <th>ASCII</th>
+                    <th>Unicode</th>
                     <th>Minus</th>
                     <th>Right</th>
                 </tr>
@@ -241,6 +242,7 @@
                     <td id="hexadecimal">0</td>
                     <td id="decimal">0</td>
                     <td id="ascii">0</td>
+                    <td id="unicode">U+0000</td>
                     <!-- Hack: display ASCII printable character(s)  -->
                     <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
                     <td><button type="button" id="divide2" onclick="divide(2)">÷2</button></td>
