added blank file for PBL

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -21,6 +21,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/grid">Mini Labs</a>
                     <a class="dropdown-item" href="/aboutme">About Us</a>
+                    <a class="dropdown-item" href="/val">Our Website Prototype</a>
                 </div>
             </li>
         </ul>
