--- a/templates/binary.html
+++ b/templates/binary.html
@@ -372,6 +372,7 @@
                     {% endif %}
 
                     {% if j == 2 %}
+                    <hr style="background-color: white">
                     <p style="color:white; font-size:20px; margin:1%">Result</p>
                     <div class="col-sm-1"></div>
                     {% for i in range(1, 10) %}
@@ -400,6 +401,7 @@
                     <tr>
                         <th>Row 1</th>
                         <th>Row 2</th>
+
                         <th>Result</th>
                     </tr>
                     <tr>
