Almost done controllers

--- a/templates/controllers.html
+++ b/templates/controllers.html
@@ -16,8 +16,8 @@
   <thead>
   <tr>
     <div class="content_img">
-      <img src='/static/brian.png' width='150%' height='200%' style="margin: 0% 0% 0%">
-      <div>Brian Zhang:<br>15 years old<br>Allergic to cats </div>
+      <img src="../static/omen.png" width='150%' height='200%' style="margin: 0% 0% 0%">
+      <div>Omen:<br>He has some utility in the form of a smoke grenade and another ability that can go through walls and obscure the vision of enemies.</div>
     </div>
   </tr>
   </thead>
@@ -25,19 +25,19 @@
   <tr>
     <div class="content_img">
       <img src="../static/brimstone.png" width='150%' height='200%' style="margin: 0% 0% 0%">
-      <div>Brimstone:<br>Abilities:Stim beacon grants players faster fire rate <br>Incendiary:Grenade launched molotov<br>Sky smoke: Long lasting smokes placed using hand-held map Ult: Orbital Strike, Beam shooting up from floor doing heavy damage and lasting a couple seconds </div>
+      <div>Brimstone:<br> He can call down smoke grenades, fire napalms that act like molotovs, buff allied agents with additional firepower, and call down an airstrike. </div>
     </div>
   </tr>
   <tr>
     <div class="content_img">
-      <img src='/static/derrick.png' width='150%' height='200%' style="margin: 0% 0% 0%">
-      <div>Derrick Huang:<br>15 years old<br>Likes to swim </div>
+      <img src="../static/viper.png" width='150%' height='200%' style="margin: 0% 0% 0%">
+      <div>Viper<br>Viper wields toxic gases that run off of a refillable reserve. She can emit poison from a grenade or create a line wall with the vapors. </div>
     </div>
   </tr>
   <tr>
     <div class="content_img">
-      <img src='/static/reinhardt%20(1).png' width='150%' height='200%' style="margin: 0% 0% 0%">
-      <div>Reinhardt Lotter:<br>15 years old<br>Gymnast for 12 years</div>
+      <img src="../static/astra.png"  width='150%' height='200%' style="margin: 0% 0% 0%"><img/>
+      <div>Astra<br>She’s a controller that can play the game like a chess match, being able to set her team up with smokes, stuns, and blackholes.</div>
     </div>
   </tr>
   </tbody>
