Start of changing theme

--- a/templates/grid.html
+++ b/templates/grid.html
@@ -138,25 +138,25 @@
     <div class="row">
         <style>
             a:link {
-                color: pink;
+                color: red;
                 background-color: transparent;
                 text-decoration: none;
             }
 
             a:visited {
-                color: pink;
+                color: red;
                 background-color: transparent;
                 text-decoration: none;
             }
 
             a:hover {
-                color: deeppink;
+                color: orangered;
                 background-color: transparent;
                 text-decoration: underline;
             }
 
             a:active {
-                color: hotpink;
+                color: red;
                 background-color: transparent;
                 text-decoration: underline;
             }
