--- a/templates/controllers.html
+++ b/templates/controllers.html
@@ -1,10 +1,12 @@
+<!DOCTYPE HTML>
 <!-- Extending the predefined project layout -->
 {% extends "layouts/base.html" %}
 {% set project = "Controllers" %}
 
 <!- This variable sets name of browser tab  -->
 {% set project = "About Us" %}
-<!DOCTYPE HTML>
+
+
 <html lang="en">
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
@@ -16,7 +18,7 @@
   <thead>
   <tr>
     <div class="content_img">
-      <img src="../static/omen.png" width='150%' height='200%' style="margin: 0% 0% 0%">
+      <img src="../static/valorant/agents/omen.png" width='150%' height='200%' style="margin: 0% 0% 0%">
       <div>Omen:<br>He has some utility in the form of a smoke grenade and another ability that can go through walls and obscure the vision of enemies.</div>
     </div>
   </tr>
@@ -24,19 +26,19 @@
   <tbody>
   <tr>
     <div class="content_img">
-      <img src="../static/brimstone.png" width='150%' height='200%' style="margin: 0% 0% 0%">
+      <img src="../static/valorant/agents/brimstone.png" width='150%' height='200%' style="margin: 0% 0% 0%">
       <div>Brimstone:<br> He can call down smoke grenades, fire napalms that act like molotovs, buff allied agents with additional firepower, and call down an airstrike. </div>
     </div>
   </tr>
   <tr>
     <div class="content_img">
-      <img src="../static/viper.png" width='150%' height='200%' style="margin: 0% 0% 0%">
+      <img src="../static/valorant/agents/viper.png" width='150%' height='200%' style="margin: 0% 0% 0%">
       <div>Viper<br>Viper wields toxic gases that run off of a refillable reserve. She can emit poison from a grenade or create a line wall with the vapors. </div>
     </div>
   </tr>
   <tr>
     <div class="content_img">
-      <img src="../static/astra.png"  width='150%' height='200%' style="margin: 0% 0% 0%"><img/>
+      <img src="../static/valorant/agents/astra.png"  width='150%' height='200%' style="margin: 0% 0% 0%"><img/>
       <div>Astra<br>She’s a controller that can play the game like a chess match, being able to set her team up with smokes, stuns, and blackholes.</div>
     </div>
   </tr>
