--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/aboutme">
-        <img src="/static/Sus.jpg" width="50" height="50" class="d-inline-block align-center" alt="">
+    <a class="navbar-brand" href="/val">
+        <img src="/static/valorant.png" width="50" height="50" class="d-inline-block align-center" alt="">
 
-        The Hackermen
+        Valorant Clips
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
