--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -20,6 +20,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('logicgates') }}>Logic Gates</a>
 
 
+
             <html>
             <head>
                 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -87,6 +88,15 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                        </ul>
                 </body>
                 </html>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarModel" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Data
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/api/joke">Joke RESTapi</a>
+                            <a class="dropdown-item" href="/api/jokes">Jokes RESTapi</a>
+                            <a class="dropdown-item" href="/crud/">SQL CRUD</a>
 
             <!-- stub is shown using the name of the route -->
     </div>
