--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -21,7 +21,18 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/grid">Mini Labs</a>
                     <a class="dropdown-item" href="/aboutme">About Us</a>
-                    <a class="dropdown-item" href="/val">Our Website Prototype</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarModel" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Valorant Pages
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/controllers">Controllers</a>
+                    <a class="dropdown-item" href="/duelists">Duelists</a>
+                    <a class="dropdown-item" href="/sentinels">Sentinels</a>
+                    <a class="dropdown-item" href="/initiators">Initiators</a>
+                    <a class="dropdown-item" href="/comments">Comment On a Video</a>
                 </div>
             </li>
         </ul>
